[package]
name = "aoc"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
structopt = "0.3"
regex = "1"
lazy_static = "1"
anyhow = "1"
impl_ops = "0.1"
itertools = "0.9"
lalrpop-util = "0.19"
num-traits = "0.2"
num-derive = "0.3"
num = "0.3"
binary-search = "0.1.1"
tuple = "0.5.1"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
