[package]
name = "aoc"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"

[dependencies]
anyhow = "1"
binary-search = "0.1.1"
impl_ops = "0.1"
itertools = "0.9"
lalrpop-util = { version = "0.19", features = ["lexer"] }
lazy_static = "1"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
recap = "0.1"
regex = "1"
serde = "1.0"
structopt = "0.3"
tuple = "0.5.1"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
