[package]
name = "aoc"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["y2022"]
all = ["y2019", "y2020", "y2021", "y2022"]
y2019 = []
y2020 = []
y2021 = []
y2022 = []

[profile.release]
lto = "thin"
overflow-checks = true

[dependencies]
anyhow = "1"
binary-search = "0.1.1"
bitreader = "0.3"
derivative = "2.2.0"
hex = "0.4"
impl_ops = "0.1"
itertools = "0.10.5"
lalrpop-util = { version = "0.19", features = ["lexer"] }
lazy_static = "1"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
priority-queue = "1.3.0"
recap = "0.1"
regex = "1"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
tuple = "0.5.1"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
