[package]
name = "util"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO - Switch to auto-ops stable once the PR gets merged and released
auto_ops = { git = "https://github.com/FuegoFro/auto_ops.git", rev = "458e54ba6cc525f96f2aa072af5be846b26ecb1e" }
itertools = "0.10.5"
num-traits = "0.2"