[package]
name = "y2020"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

anyhow = "1"
impl_ops = "0.1"
itertools = "0.10.5"
lalrpop-util = { version = "0.19", features = ["lexer"] }
lazy_static = "1"
regex = "1"

[build-dependencies]
lalrpop = { version = "0.19", features = ["lexer"] }
