[package]
name = "y2021"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

bitreader = "0.3"
hex = "0.4"
itertools = "0.10.5"
lazy_static = "1"
num = "0.4.0"
num-derive = "0.3"
num-traits = "0.2"
recap = "0.1"
serde = "1.0"
tuple = "0.5.1"
