[package]
name = "y2022"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
#anyhow = "1"
#binary-search = "0.1.1"
#bitreader = "0.3"
derivative = "2.2.0"
#hex = "0.4"
#impl_ops = "0.1"
itertools = "0.10.5"
#lalrpop-util = { version = "0.19", features = ["lexer"] }
#lazy_static = "1"
num = "0.4.0"
#num-derive = "0.3"
num-traits = "0.2"
priority-queue = "1.3.0"
recap = "0.1"
#regex = "1"
serde = "1.0"
serde_json = "1.0"
skiplist = "0.4.0"
#structopt = "0.3"
tuple = "0.5.1"

#[build-dependencies]
#lalrpop = { version = "0.19", features = ["lexer"] }
