[package]
name = "y2022"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

derivative = "2.2.0"
itertools = "0.10.5"
num = "0.4.0"
num-traits = "0.2"
priority-queue = "1.3.0"
recap = "0.1"
serde = "1.0"
serde_json = "1.0"
skiplist = "0.4.0"
tuple = "0.5.1"
