[package]
name = "y2023"
version = "0.1.0"
authors = ["Danny Weinberg <FuegoFro@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }

itertools = "0.10.5"
recap = "0.1"
regex = "1"
serde = "1.0"
proc-macro2 = "1.0.58" # Indirectly depended on, need to force to more recent version

#derivative = "2.2.0"
#num = "0.4.0"
#num-traits = "0.2"
#priority-queue = "1.3.0"
#serde_json = "1.0"
#skiplist = "0.4.0"
#tuple = "0.5.1"
